Update CSS for Code sample wrap issue

--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,10 @@ a {
   text-align: center;
 }
 
-.chord > pre {
+.code {
   background-color: #222;
   color: #fff;
   padding: 1em;
   border-radius: 0.5em;
+  font-size: 0.8em;
 }
